added npc wz reading & npc movement & script baseline handling & packet handling